--- a/herokuapp/templates/default.html
+++ b/herokuapp/templates/default.html
@@ -1,20 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>map for django</title>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
-<link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
-</head>
-<body>
-   <h1>Map comes here</h1>
-<<div id='map' style='width: 400px; height: 300px;'></div>
+<meta charset="utf-8">
+<meta name="viewport" content="initial-scale=1, maximum-scale=1,user-scalable=no">
+<title>KML</title>
+<link rel="stylesheet" href="https://js.arcgis.com/3.34/dijit/themes/tundra/tundra.css">
+<link rel="stylesheet" href="https://js.arcgis.com/3.34/esri/css/esri.css">
+<style>
+  html, body { height: 100%; width: 100%; margin: 0; padding: 0; }
+  #map { height: 100%; margin: 0; padding: 0; }
+  #meta {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    width: 300px;
+    height: 100px;
+    z-index: 40;
+    background: #fff;
+    color: #777;
+    padding: 5px;
+    border: 2px solid #666;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    font-family: arial;
+    font-size: 0.9em;
+  }
+  #meta h3 {
+    color: #666;
+    font-size: 1.1em;
+    padding: 0px;
+    margin: 0px;
+    display: inline-block;
+  }
+  #loading {
+    float: right;
+  }
+</style>
+
+<script src="https://js.arcgis.com/3.34/"></script>
 <script>
-mapboxgl.accessToken = 'pk.eyJ1IjoicHVydXNvdGgiLCJhIjoiY2tpcHcwOHpyMDltODM0cGp0NjVneGVsOSJ9.rGo6gmdGNU0fVi5K8h3Bsg';
-var map = new mapboxgl.Map({
-container: 'map',
-style: 'mapbox://styles/mapbox/streets-v11'
-});
+  var map;
+  require([
+    "esri/map", "esri/layers/KMLLayer",
+    "dojo/parser", "dojo/dom-style",
+
+    "dijit/layout/BorderContainer", "dijit/layout/ContentPane", "dojo/domReady!"
+  ], function(
+    Map, KMLLayer,
+    parser, domStyle
+  ) {
+    map = new Map("map", {
+      basemap: "topo",
+      center: [139.69, 0],
+      zoom: 1
+    });
+
+    parser.parse();
+
+    var kmlUrl = "https://earthquake.usgs.gov/fdsnws/event/1/query?format=kml&minmagnitude=5.8";
+    var kml = new KMLLayer(kmlUrl);
+    map.addLayer(kml);
+    kml.on("load", function() {
+      domStyle.set("loading", "display", "none");
+    });
+  });
 </script>
+</head>
+
+<body class="tundra">
+<div data-dojo-type="dijit/layout/BorderContainer"
+     data-dojo-props="design:'headline',gutters:false"
+     style="width: 100%; height: 100%; margin: 0;">
+  <div id="map"
+       data-dojo-type="dijit/layout/ContentPane"
+       data-dojo-props="region:'center'">
+    <div id="meta">
+      <span id="loading"><img src="images/loading_black.gif" /></span>
+      <h3>Display KML Using a <a href="https://developers.arcgis.com/javascript/3/jsapi/kmllayer-amd.html">KMLLayer</a></h3>
+      <br />
+      The map displays a simple KML file that was created using Google Earth and
+      is hosted on an Esri server. Symbology and attributes are honored.
+    </div>
+  </div>
+</div>
 </body>
 </html>
