--- a/herokuapp/templates/default.html
+++ b/herokuapp/templates/default.html
@@ -77,10 +77,9 @@
        data-dojo-props="region:'center'">
     <div id="meta">
       <span id="loading"><img src="images/loading_black.gif" /></span>
-      <h3>Display KML Using a <a href="https://developers.arcgis.com/javascript/3/jsapi/kmllayer-amd.html">KMLLayer</a></h3>
+      <h3>Purusoth Shanmugarajah</h3>
       <br />
-      The map displays a simple KML file that was created using Google Earth and
-      is hosted on an Esri server. Symbology and attributes are honored.
+<h2>This is an prototype</h2>
     </div>
   </div>
 </div>
